# docs/openapi.json
@@ -3647,13 +3647,21 @@
           },
           "truncated": {
             "type": "boolean"
+          },
+          "original": {
+            "type": "boolean"
+          },
+          "images": {
+            "type": "integer"
           }
         },
         "required": [
           "subject",
           "text",
           "html",
-          "truncated"
+          "truncated",
+          "original",
+          "images"
         ],
         "additionalProperties": false
       },
@@ -5292,6 +5300,12 @@
           },
           "truncated": {
             "type": "boolean"
+          },
+          "original": {
+            "type": "boolean"
+          },
+          "images": {
+            "type": "integer"
           }
         },
         "required": [
@@ -5300,7 +5314,9 @@
           "received",
           "text",
           "html",
-          "truncated"
+          "truncated",
+          "original",
+          "images"
         ],
         "additionalProperties": false
       },
